<resources>
    <string name="app_name">Student Progress Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="btn_terms">Terms</string>
    <string name="btn_courses">Courses</string>
    <string name="btn_assessments">Assessments</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="delete_all">Delete All Data</string>
    <string name="title_activity_term_summary">TermSummaryActivity</string>
    <string name="title_activity_course_summary">CourseSummaryActivity</string>
    <string name="title_activity_assessment_summary">AssessmentSummaryActivity</string>
    <string name="title_activity_term_detail">TermDetailActivity</string>
    <string name="term_end">Term End</string>
    <string name="term_name">Term Name</string>
    <string name="term_start">Term Start</string>
    <string name="action_delete_term">Delete Term</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="textViewTermEnd">Term End</string>
    <string name="textViewTermName">Term Name</string>
    <string name="textViewTermStart">Term Start</string>
    <string name="enter_term_name">enter term name</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="course_name">Course Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="status">Status</string>
    <string name="mentor">Mentor</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="notes">Notes</string>
    <string name="delete_course">Delete Course</string>
    <string name="course_notes">Notes</string>


    <string-array name="spinner_status">
        <item>Completed</item>
        <item>In Progress</item>
        <item>Plan to Take</item>
        <item>Dropped</item>
    </string-array>

    <string-array name="spinner_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>


    <string name="title_activity_assessment_detail">AssessmentDetailActivity</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="goal_date">Goal Date</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="due_date">Due Date</string>
    <string name="type">Type</string>
    <string name="title_activity_course_notes">CourseNotesActivity</string>
    <string name="title_activity_course_note">CourseNoteActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="enter_note">Enter Note</string>
    <string name="title_activity_test">test</string>
    <string name="delete_note">Delete Note</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="channel_name">course start notification channel</string>
    <string name="channel_description">notificaiton channel for course start alarms</string>
    <string name="set_course_start_alarm">Set Course Start Alarm</string>
    <string name="set_course_end_alarm">Set Course End Alarm</string>
    <string name="set_alarm_course_start_date">Set Alarm: Course Start Date</string>
    <string name="set_alarm_course_end_date">Set Alarm: Course End Date</string>
    <string name="add_course_note">Add Course Note</string>
    <string name="set_alarm_due_date">Set Alarm: Due Date</string>
    <string name="set_alarm_goal_date">Set Alarm: Goal Date</string>
    <string name="share_notes">Share Notes</string>

    <string name="channel_courseend_name">course end notification channel</string>
    <string name="channel_courseend_description">notificaiton channel for course endalarms</string>
    <string name="channel_assessgoal_name">assessment goal notification channel</string>
    <string name="channel_assessgoal_description">notificaiton channel for assessment goal alarms</string>
    <string name="channel_assessdue_name">assessment due notification channel</string>
    <string name="channel_assessdue_description">notificaiton channel for assessment due alarms</string>
</resources>
