<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wgu_android.studentprogresstracker.CourseDetailActivity">
    <item
        android:id="@+id/action_assessment_alarm_due"
        android:orderInCategory="100"
        android:title="@string/set_alarm_due_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_assessment_alarm_goal"
        android:orderInCategory="100"
        android:title="@string/set_alarm_goal_date"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_delete_assessment"
        android:orderInCategory="100"
        android:title="@string/delete_assessment"
        app:showAsAction="never" />

</menu>