<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnViewTerms"
        style="@style/title"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_terms"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCourses"
        style="@style/title"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_courses"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewTerms" />

    <Button
        android:id="@+id/btnAssessments"
        style="@style/title"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_assessments"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCourses" />

</androidx.constraintlayout.widget.ConstraintLayout>