<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AssessmentDetailActivity"
    tools:showIn="@layout/activity_assessment_detail">

    <TextView
        android:id="@+id/textViewGoalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/goal_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAssessmentName" />

    <TextView
        android:id="@+id/textViewAssessmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/assessment_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAssessmentName"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewAssessmentName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoalDate" />

    <TextView
        android:id="@+id/textViewAssessmentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDueDate" />

    <Spinner
        android:id="@+id/spinnerAssessType"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAssessmentType"
        app:layout_constraintTop_toBottomOf="@+id/editTextDueDate"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/textViewCourseId_Assessments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textViewDueDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextGoalDate" />

    <EditText
        android:id="@+id/editTextGoalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textViewGoalDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssessmentName" />
</androidx.constraintlayout.widget.ConstraintLayout>