<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermDetailActivity"
    tools:showIn="@layout/activity_term_detail">

    <TextView
        android:id="@+id/textViewTermEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/term_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermStart" />

    <EditText
        android:id="@+id/editTextTermName"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewTermName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTermName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/term_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTermStart"
        android:layout_width="79dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/term_start"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_AssociatedCourses"
        android:layout_width="match_parent"
        android:layout_height="502dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndDate" />

    <TextView
        android:id="@+id/textViewTermId_TermDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/textViewTermId_TermDetail"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toEndOf="@+id/textViewTermStart"
        app:layout_constraintTop_toBottomOf="@+id/editTextTermName" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/textViewTermEnd"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartDate" />
</androidx.constraintlayout.widget.ConstraintLayout>